fix black line bug for background image (cropped it)

--- a/technolgap/src/custom-pico.css
+++ b/technolgap/src/custom-pico.css
@@ -15,7 +15,7 @@ body {
 
 @media (max-width: 500px) {
   .classic-bg {
-    background-image: url("/classic-bg-mobile.png")
+    background-image: url("/classic-bg-mobile.png");
   }
 }
 .button {
@@ -510,7 +510,7 @@ details summary[role=button]:not(.outline)::after {
 }
 [data-theme=dark] {
   --pico-background-color: rgb(19, 22.5, 30.5);
-  --pico-color: #ffffff;
+  --pico-color: #c2c7d0;
   --pico-text-selection-color: rgba(1, 170, 255, 0.1875);
   --pico-muted-color: #7b8495;
   --pico-muted-border-color: #202632;
